src/Makefile.am: Try to fix build rule for prometheus.pb-c.[ch] on FreeBSD.
FreeBSD 10 fails with the following error:

    Making all in src
      PROTOC-C pinba.pb-c.c
      PROTOC-C prometheus.pb-c.c
    Missing input file.
    *** Error code 1

One likely cause is that FreeBSD is probably not using GNU make and the
build rule was possibly using a GNUism before.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1461,7 +1461,7 @@ CLEANFILES += prometheus.pb-c.c prometheus.pb-c.h
 BUILT_SOURCES += prometheus.pb-c.c prometheus.pb-c.h
 
 prometheus.pb-c.c prometheus.pb-c.h: $(top_srcdir)/proto/prometheus.proto
-	$(AM_V_PROTOC_C)$(PROTOC_C) -I$(top_srcdir)/proto --c_out=$(builddir) $<
+	$(AM_V_PROTOC_C)$(PROTOC_C) -I$(top_srcdir)/proto --c_out=$(builddir) $(top_srcdir)/proto/prometheus.proto
 endif
 
 install-exec-hook:
